syntax = "proto3";

option java_package = "com.example.sep3rest.protobuf";


service CategoryController {
  rpc addCategory(Category) returns (Category);
  rpc removeCategory(Category) returns (Empty);
  rpc getAll(Empty) returns (CategoryList);
  rpc update(Category) returns (Category);
}

service FileController {
  rpc upload(FileCreationDto) returns (File);
  rpc download(Id) returns (File);
  rpc getAll(Empty) returns (FileDisplayList);
  rpc getById(Id) returns (File);
  rpc getByCategory(Category) returns (FileDisplayList);
  rpc getByTitle(String) returns (FileDisplayList);
  rpc update(FileUpdateDto) returns (File);
  rpc remove(Id) returns (Empty);
}

service UserController {
  rpc getByUsername(String) returns (User);
  rpc getById(Id) returns (User);
  rpc getAll(Empty) returns (UserList);
  rpc create(UserCreationDto) returns (User);
  rpc logIn(UserLogInDto) returns (User);
  rpc update(UserUpdateDto) returns (User);
  rpc remove(Id) returns (Empty);
}


//general
message Empty {}

message String {
  string string = 1;
}
message Id {
  int32 id =1;
}


//proto for Files

message File {
  string title = 1;
  string description = 2;
  bytes bytes =3;
  Category category = 4;
  User uploadedBy = 5;
  string contentType = 6;
  int32 id = 7;
}

message FileCreationDto {
  string title = 1;
  string description = 2;
  bytes bytes =3;
  Category category = 4;
  User uploadedBy = 5;
  string contentType = 6;
}

message FileUpdateDto {
  string title = 1;
  string description = 2;
  Category category = 3;
  int32 id = 4;
}

message FileDisplayDto {
  string title = 1;
  string description = 2;
  Category category = 3;
  int32 id = 4;
  User uploadedBy = 5;
}

message FileList {
  repeated File files = 1;
}
message FileDisplayList {
  repeated FileDisplayDto files = 1;
}


// proto for Users
message User {
  string username = 1;
  string password = 2;
  string name = 3;
  bool isAdmin = 4;
  int32 id = 5;
}
message UserCreationDto {
  string username = 1;
  string password = 2;
  string name = 3;
  bool isAdmin = 4;
}

message UserUpdateDto {
  string username = 1;
  string password = 2;
  string name = 3;
}

message UserLogInDto {
  string username = 1;
  string password = 2;
}

message UserList {
  repeated User users = 1;
}



// proto for Categories
message Category {
  string name = 2;
}

message CategoryList {
  repeated Category categories = 1;
}